apps/mimir-chat/base/mimir-chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mimir-chat-web
spec:
  selector:
    matchLabels:
      app: mimir-chat-web
      tier: web
  template:
    metadata:
      labels:
        app: mimir-chat-web
        tier: web
    spec:
      containers:
        - name: node
          image: quicklookup/mimir-chat:42d20d7
          args:
            - npm
            - start
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              port: 3000
              path: /api/status/alive
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              port: 3000
              path: /api/status/ready
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
      imagePullSecrets:
        - name: dockerlock
